# maximalist-compliance

./: .gitignore  CLAUDE.md  README.md  computed_torque_control.py  dynamic_terms_verification.py  momentum_observer_identified.py  pyproject.toml  robot_identification.py  view_robot.py
.claude/: settings.local.json
maxcomp/: __init__.py  control.py  core.py  excitation.py  identification.py  observer.py  regressors.py  verification.py  viewer.py
robots/: pendulum.urdf  planar_2dof.urdf  sixdof_arm.urdf
robots/my-robot/: config.json  robot.xml  scene_single_finger.xml  scene_single_finger_torque.xml  single_finger.xml  single_finger_torque.xml
robots/my-robot/assets/: connector_j0.part  connector_j0.stl  connector_j1.part  connector_j1.stl  connector_j2.part  connector_j2.stl  dc15_a01_hinge_1.part  dc15_a01_hinge_1.stl  hex_thin_nut_grade_a___b_m2__2d2c6a74cd560d0f967632e97d225890.part  hex_thin_nut_grade_a___b_m2__2d2c6a74cd560d0f967632e97d225890.stl  motor_base.part  motor_base.stl  motor_free.part  motor_free.stl  ph_pan_head_screw_m2x0_40_x_4__a9f3cf0117e9e674aabf2d36749011ef.part  ph_pan_head_screw_m2x0_40_x_4__a9f3cf0117e9e674aabf2d36749011ef.stl  plate_bottom.part  plate_top.part  screw_4.part  screw_4.stl  screw_8.part  screw_8.stl  tip_base.part  tip_base.stl  tip_conver.part  tip_conver.stl
robots/my-robot/assets/convex_decomposition/: base_link_parts_00000.stl  base_link_parts_00001.stl  base_link_parts_00002.stl  base_link_parts_00003.stl  (+364 more)
scripts/: control.py  identify.py  observe.py  optimize_excitation.py  verify.py  view.py
(+26 files in other folders)
